Fix image source path in hero section

--- a/index.html
+++ b/index.html
@@ -929,7 +929,7 @@ body.lightbox-open{overflow:hidden}
 
 <!-- HERO -->
 <section class="hero">
-  <img class="hero-image" src="images/hero_1.jpg" alt="Chef at Anthes" fetchpriority="high">
+  <img class="hero-image" src="mages/hero_1.jpg" alt="Chef at Anthes" fetchpriority="high">
   <div class="hero-overlay"></div>
   <div class="hero-content">
     <div class="hero-subtitle">Japanese · Greek Cuisine</div>
