--- a/index.html
+++ b/index.html
@@ -932,7 +932,7 @@ body.lightbox-open{overflow:hidden}
   <img class="hero-image" src="hero_1.jpg" alt="Chef at Anthes" fetchpriority="high">
   <div class="hero-overlay"></div>
   <div class="hero-content">
-    <div class="hero-subtitle">Japanese · Greek Cuisine</div>
+    <div class="hero-subtitle">Greek Cuisine</div>
     <h1 class="hero-title">A Symphony<br>of Cultures</h1>
     <div class="hero-location">Skoufou 3, Athens · Greece</div>
     <div class="hero-actions">
