--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@ nav.scrolled{
 
 
 /* ─── CHEF ─── */
-/*.chef {
+.chef {
   background: var(--primary);
   display: grid;
   grid-template-columns: 1fr 1fr;
