--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Anthes - Restaurant</title>
-<meta name="description" content="Anthes is a modern Japanese-Greek restaurant in Athens, blending refined Japanese technique with vibrant Greek flavors. Reserve your table at Skoufou 3.">
+<meta name="description" content="Anthes is a modern Greek restaurant in Athens, blending refined Japanese technique with vibrant Greek flavors. Reserve your table at Skoufou 3.">
 <meta name="robots" content="index,follow,max-image-preview:large">
 <meta name="theme-color" content="#111110">
 <link rel="canonical" href="https://anthesrestaurant.com/">
@@ -931,7 +931,7 @@ body.lightbox-open{overflow:hidden}
   <img class="hero-image" src="hero_1.jpg" alt="Chef at Anthes" fetchpriority="high">
   <div class="hero-overlay"></div>
   <div class="hero-content">
-    <div class="hero-subtitle">Japanese · Greek Cuisine</div>
+    <div class="hero-subtitle">Greek Cuisine</div>
     <h1 class="hero-title">A Symphony<br>of Cultures</h1>
     <div class="hero-location">Skoufou 3, Athens · Greece</div>
     <div class="hero-actions">
