--- a/index.html
+++ b/index.html
@@ -816,6 +816,7 @@ body.lightbox-open{overflow:hidden}
     <div class="hero-location">Skoufou 3, Athens · Greece</div>
     <div class="hero-actions">
       <a href="https://www.i-host.gr/Reservations/New?restaurant=2203&channel=website&lang=eng" target="_blank" rel="noopener noreferrer" class="pill-btn" data-track="reserve_click" data-track-label="hero_reserve">Reserve a Table</a>
+      <a href="FOOD-MENU.pdf" target="_blank" rel="noopener noreferrer" class="pill-btn pill-btn--outline" data-track="menu_open" data-track-label="hero_menu_pdf">Menu</a>
       <a href="#gallery" class="pill-btn pill-btn--dark">Explore</a>
     </div>
   </div>
